--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,12 @@
       package="net.sf.andpdf.pdfviewer"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
+      
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="15" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" 
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
 <!-- 
         <activity android:name=".PdfViewerActivity"
                   android:label="@string/app_name">
@@ -16,7 +19,5 @@
         </activity>
  -->
  		<activity android:name=".PdfViewerActivity" />
- 		<activity android:name=".PdfViewerActivityNew" />
- 		<activity android:name=".PdfViewerActivityNewer" />
     </application>
 </manifest>
